== Version 1.0.9

Release notes here

* Changed documentation to point at the new http svn URL, which is more accessible.

== Version 1.0.8

Another bugfix release - this time to resolve the version mismatch

== Version 1.0.7

Quick bugfix release to ensure that you don't have to have the rspec gem installed
in order to use autotest with rspec_on_rails.

* Fixed [#13015] autotest gives failure in 'spec_command' after upgrade 1.0.5 to 1.0.6

== Version 1.0.6

The "holy cow, batman, it's been a long time since we released and there are a ton of bug
fixes, patches and even new features" release.

Warning: Spec::Rails users: In fixing 11508, we've removed the raise_controller_errors method. As long as you
follow the upgrade instructions and run 'script/generate rspec' you'll be fine, but if you skip this
step you need to manually go into spec_helper.rb and remove the call to that method (if present - it
might not be if you haven't upgraded in a while).

Warning: Implementors of custom formatters. Formatters will now be sent an Example object instead of just a 
String for #example_started, #example_passed and #example_failed. In certain scenarios 
(Spec::Ui with Spec::Distributed), the formatter must ask the Example for its sequence number instead of
keeping track of a sequence number internal to the formatter. Most of you shouldn't need to upgrade
your formatters though - the Example#to_s method returns the example name/description, so you should be
able to use the passed Example instance as if it were a String.

* Applied [#12986] Autotest Specs + Refactoring (Patch from Scott Tayler)
* Added a #close method to formatters, which allows them to gracefully close streams.
* Applied [#12935] Remove requirement that mocha must be installed as a gem when used as mocking framework. (Patch from Ryan Kinderman).
* Fixed [#12893] RSpec's Autotest should work with rspec's trunk
* Fixed [#12865] Partial mock error when object has an @options instance var